--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@playwright/test": "^1.48.0",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
