fix: Add Prisma JSON compatibility to eligibility types
- Add [key: string]: unknown index signature to all eligibility interfaces
- Cast EligibilityCriteria to Prisma.InputJsonValue in factory and seed
- Add DATABASE_URL to CI test step
- Fix Playwright reporter type assertion
- Resolves TypeScript compatibility with Prisma JSON fields

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,9 @@ jobs:
 
       - name: Run Vitest tests
         run: pnpm run test
+        env:
+          DATABASE_URL: "postgresql://user:password@localhost:5432/test"
+          DIRECT_URL: "postgresql://user:password@localhost:5432/test"
 
   build:
     name: Build
