fix: Add database migration step to CI before running tests
- Run 'pnpm prisma db push' to create tables before tests
- Resolves 'table does not exist' error in unit tests
- Tests require actual database schema to be present

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,12 @@ jobs:
           DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/scholarship_hunter_test"
           DIRECT_URL: "postgresql://postgres:postgres@localhost:5432/scholarship_hunter_test"
 
+      - name: Run database migrations
+        run: pnpm prisma db push
+        env:
+          DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/scholarship_hunter_test"
+          DIRECT_URL: "postgresql://postgres:postgres@localhost:5432/scholarship_hunter_test"
+
       - name: Run Vitest tests
         run: pnpm run test
         env:
