--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.test
+
+.claude/settings.local.json
 
 # Vercel
 .vercel
